--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <h2>Open Sourse Books</h2>
         <ul>
             <li>IDL: <a href="https://www.gis-dreaz.com/idl-tutorial">IDL-Tutorial</a> (Continuously updating)</li>
+            <li><a href="https://www.gis-dreaz.com/my_thinkingbook">小萌新的随想录</a> </li>
         </ul>
         <h2>Connect</h2>
         <ul>
