--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <h2>Open Sourse Books</h2>
         <ul>
             <li>IDL: <a href="https://www.gis-dreaz.com/idl-tutorial">IDL-Tutorial</a> (Continuously updating)</li>
-            <li>Personal blog: <a href="https://www.gis-dreaz.com/my_thinkingbook">小萌新的随想录</a> </li>
+            <li>Blog: <a href="https://www.gis-dreaz.com/my_thinkingbook">小萌新的随想录</a> </li>
         </ul>
         <h2>Connect</h2>
         <ul>
